feat: 모임 일정 세부조회 댓글제거, 참가자 명단 추가, 참여방식 변경